--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.38",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
+    "react-icons": "^5.1.0",
     "slice-machine-ui": "^1.26.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
