--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react-icons": "^5.1.0",
     "slice-machine-ui": "^1.26.0",
     "tailwindcss": "^3.4.1",
